Proofread at the high level

--- a/Article/article.bib
+++ b/Article/article.bib
@@ -331,4 +331,22 @@ eprint = {https://doi.org/10.1287/opre.12.5.655},
   howpublished = {\url{https://github.com/surakuma/communication-scheuling}},
 }
 
+@article{NPComplete3Machine,
+ author = {R\"{o}ck, Hans},
+ title = {The Three-Machine No-Wait Flow Shop is NP-Complete},
+ journal = {J. ACM},
+ issue_date = {April 1984},
+ volume = {31},
+ number = {2},
+ month = mar,
+ year = {1984},
+ issn = {0004-5411},
+ pages = {336--345},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/62.65},
+ doi = {10.1145/62.65},
+ acmid = {65},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 
