Changes after Lionel tikz diagrams:

--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -88,18 +88,24 @@
  address = {Los Alamitos, CA, USA},
 }
 
-@article{ompss,
-author = {DURAN, ALEJANDRO and AYGUADÉ, EDUARD and BADIA, ROSA M. and LABARTA, JESÚS and MARTINELL, LUIS and MARTORELL, XAVIER and PLANAS, JUDIT},
-title = {OmpSs: A PROPOSAL FOR PROGRAMMING HETEROGENEOUS MULTI-CORE ARCHITECTURES},
-journal = {Parallel Processing Letters},
-volume = {21},
-number = {02},
-pages = {173-193},
-year = {2011},
-doi = {10.1142/S0129626411000151},
 
-URL = {http://www.worldscientific.com/doi/abs/10.1142/S0129626411000151},
-eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0129626411000151}
+@article{ompss,
+  author    = {Alejandro Duran and
+               Eduard Ayguad{\'{e}} and
+               Rosa M. Badia and
+               Jes{\'{u}}s Labarta and
+               Luis Martinell and
+               Xavier Martorell and
+               Judit Planas},
+  title     = {Ompss: a Proposal for Programming Heterogeneous Multi-Core Architectures},
+  journal   = {Parallel Processing Letters},
+  volume    = {21},
+  number    = {2},
+  pages     = {173--193},
+  year      = {2011},
+  url       = {https://doi.org/10.1142/S0129626411000151},
+  doi       = {10.1142/S0129626411000151},
+eprint = { https://doi.org/10.1142/S0129626411000151}
 }
 
 
