--- a/ICPP-19/communications.tex
+++ b/ICPP-19/communications.tex
@@ -126,7 +126,7 @@
 	%%	</concept>
 	%%	</ccs2012>
 	%%\end{CCSXML}
-	\ccsdesc[100]{Computer systems organization~Embedded systems1}
+	\ccsdesc[100]{Computer systems organization~Embedded systems}
 	\ccsdesc[100]{Computer systems organization~Redundancy}
 	\ccsdesc{Computer systems organization~Robotics}
 	\ccsdesc[100]{Networks~Network reliability}
@@ -139,7 +139,7 @@
 	\section{Introduction}
 	\label{sec:intro}
 	
-	With the advent of multicore, and the use of accelerators, it is notoriously cumbersome to exploit the full capability of a machine. Indeed, there are several challenges come into picture. First, every architecture provides its own efficacy and interface. Therefore, a steep learning curve is required for programmers to take good utilization of all resources. Second, scheduling is a well known NP-Complete optimization problem, and hybrid and distributed resources make this problem harder (we refer ~\cite{webpagescheduling} for a survey on the complexity of scheduling problems and ~\cite{bleuse2015scheduling} for a recent survey in the case of hybrid nodes). Third, due to shared buses, parallel resources, it is hard to obtain a precise model based on prediction of computation and communication timings. Fourth, number of architectures has increased drastically in recent years, therefore it is almost impossible to develop hand tune optimized code for all these architectures. All these observations led to the development of different task based runtime systems. Among several runtimes, we may cite QUARK~\cite{YarKhan:2011:Quark:Manual} and PaRSEC~\cite{parsec} from from ICL, Univ. of Tennessee Knoxville (USA), StarPU~\cite{starpu} form INRIA Bordeaux (France), Legion~\cite{legion12} from Stanford Univ. (USA), StarSs~\cite{ompss} from Barcelona Supercomputing Center (Spain), KAPPI~\cite{kaapi} from INRIA Grenoble (France). All these runtime systems allow programmers to express their algorithms at the abstract level in the form of direct acyclic graphs (DAG), where vertices represent computations and edges represent dependencies among them. Sometimes some static information such as distance to exit (last) node as a priority or affinity of computation towards resources is also provided along with the DAG. Then runtime manages scheduling of computations and communications, data transfers among different memories, computation-communication overlap, load balance in the best possible way.  
+	With the advent of multicore, and the use of accelerators, it is notoriously cumbersome to exploit the full capability of a machine. Indeed, there are several challenges come into picture. First, every architecture provides its own efficacy and interface. Therefore, a steep learning curve is required for programmers to take good utilization of all resources. Second, scheduling is a well known NP-Complete optimization problem, and hybrid and distributed resources make this problem harder (we refer ~\cite{webpagescheduling} for a survey on the complexity of scheduling problems and ~\cite{bleuse2015scheduling} for a recent survey in the case of hybrid nodes). Third, due to shared buses, parallel resources, it is hard to obtain a precise model based on prediction of computation and communication timings. Fourth, number of architectures has increased drastically in recent years, therefore it is almost impossible to develop hand tune optimized code for all these architectures. All these observations led to the development of different task based runtime systems. Among several runtimes, we may cite QUARK~\cite{YarKhan:2011:Quark:Manual} and PaRSEC~\cite{parsec} from from ICL, Univ. of Tennessee Knoxville (USA), StarPU~\cite{starpu} form INRIA Bordeaux (France), Legion~\cite{legion12} from Stanford Univ. (USA), StarSs~\cite{ompss} from Barcelona Supercomputing Center (Spain), KAPPI~\cite{kaapi} from INRIA Grenoble (France). All these runtime systems allow programmers to express their algorithms at the abstract level in the form of direct acyclic graphs (DAG), where vertices represent computations and edges represent dependencies among them. Sometimes some static information such as distance to exit (last) node as a priority or affinity of computation towards resources is also provided along with the DAG. Then runtime is responsible for managing scheduling of computations and communications, data transfers among different memories, computation-communication overlap, and load balance.
 	
 	
 	%%	Historically there is a great focus on the design of parallel algorithms and to minimize the complexity of the computations. Also In the last decade, there is a drastic improvement in the hardware to provide perminent rate of computation, but little improvement has been achieved for the rate of data movement. With extreme scale computing, supercomputers face bottlenecks due to ever growing need of data. Therefore focus of HPC community is now changing towards avoiding, hiding and minimizing communications. (Kyelick work and http://science.energy.gov/~/media/ascr/ ascac/pdf/meetings/20140210/Top10reportFEB14.pdf )
@@ -148,7 +148,8 @@
 	In the last few decades, there is a drastic improvement in the hardware to provide perminent rate of computation, but little improvement has been achieved for the rate of data movement. With extreme scale computing, supercomputers face bottlenecks due to the need of large amount of data~\cite{ascaccommitteereport2014,yelick2016}. Therefore focus of HPC community is now changing towards avoiding, hiding and minimizing communication costs.
 	
 	
-	Certain applications such as dense linear algebra kernels have regular structure. Therefore, it is possible to associate priorities, based on the task graph structure, with computations, which runtime uses to make the execution efficient. In some applications, such as sparse linear algebra kernels, where programmers do not know the precise structure of the tasks graphs in advance,  tasks are added recursively based on certain sentinel constraints. For such applications, runtime sees a set of independent ready tasks and schedule them on different processing units. It is extremely important for runtimes to decide the order of data transfers for these scheduled computations such that overlap between computations and communications can be maximised. This is the main topic of this article. We propose different strategies for runtimes such that it can maximize the overlap of computation and communication for kernels running on two different memory nodes. We prove that one of our proposed strategies is an optimal one when we do not have any restriction on the capacity of memory node. We also prove that order of communications on two memory nodes  with the objective of minimizing the makespan is  NP-Complete. We evaluate our strategies on a cluster of homogeneous nodes. But our approach is generic and easily adaptable to any system which operates on different memory spaces. Here are the important contributions of this paper.
+	Certain applications such as dense linear algebra kernels have regular structure. Therefore, it is possible to associate priorities, based on the task graph structure, with computations, which runtime uses to make the execution efficient. In irregular applications, programmers do not know the precise structure of the tasks graphs in advance, tasks are added recursively based on certain sentinel constraints. For such applications, runtime sees a set of independent ready tasks and schedule them on different processing units. It is extremely important for runtimes to decide the order of data transfers for these scheduled computations such that overlap between computations and communications can be maximised. This is the main topic of this article. We prove that order of communications on two memory nodes  with the objective of minimizing the makespan is  NP-Complete. Our proof is inspired from work by ~\cite{Papadimitriou:1980:FSL:322203.322213}, which applies a similar technique for 2-machine flowshop problem. The main difference with their and our approach is that they consider unit buffer requirement on 1st machine after job completion. On the contrary, our approach is designed where there is not any restriction on requested input data and memory is acquired before starting the data transfer on communication resource. We propose different strategies for runtimes such that it can maximize the overlap of computation and communication for kernels running on two different memory nodes. We also prove that one of our proposed strategies is an optimal one when we do not have any restriction on the capacity of memory node.  We evaluate our strategies on a cluster of homogeneous nodes. But our approach is generic and easily adaptable to any system which operates on different memory spaces. Here are the important contributions of this paper.
+
 	
 	\renewcommand{\labelitemi}{$\bullet$}
 	\begin{itemize}
@@ -171,7 +172,7 @@
 	
 	The problem considered in this article also can be viewed as a flow shop problem. Communication and computation timings of a task can be considered as processing timings on different machines.  Johnson has provided scheduling strategies for 2 and 3-machine flow shop problems with infinite memory capacity~\cite{johnson}. 2-machine flow shop problem with finite memory capacity has been proven NP-Complete by Papadimitriou et. al~\cite{Papadimitriou:1980:FSL:322203.322213}. The main difference with the our approach is that they consider unit buffer requirement on 1st machine after job completion. On the contrary, our approach is designed for tasks appearing in scientific workloads whose sizes are highly irregular and memory is acquired before starting the communication.
 	
-	There is also a numerous study pertaining to the scheduling with limited memory and storage, since the work of Sethi and Ulman, register allocation for arithmetic expressions~\cite{Sethi:1970:GOC:321607.321620}.  Sarkar et. al  worked on the scheduling of graphs of smaller-grain tasks with limited memory, where each task requires homogeneous data size ~\cite{vsarkar-pact}. The same work has been extend by Marchal et. al for task graphs where memory requirement of each task is highly irregular~\cite{loris-ipdps18}.
+	There is also a numerous study pertaining to the scheduling with limited memory and storage, since the work of register allocation for arithmetic expressions by Sethi and Ulman~\cite{Sethi:1970:GOC:321607.321620}.  Sarkar et. al  worked on the scheduling of graphs of smaller-grain tasks with limited memory, where each task requires homogeneous data size ~\cite{vsarkar-pact}. The same work has been extend by Marchal et. al for task graphs where memory requirement of each task is highly irregular~\cite{loris-ipdps18}.
 	
 	
 	\todo[inline]{theoretical/performance work on molecular chemistry kernels}
@@ -213,7 +214,7 @@
 		\end{algorithmic}
 	\end{algorithm}
 	
-	In order to prove the optimality of makespan for the schedule obtained by the above algorithm, we need the following lemma.
+\noindent In order to prove the optimality of makespan for the schedule obtained by the  Algorithm~\ref{alg:OrderOfExecutionInfinteMemory}, we need the following lemma.
 	
 	\begin{lemma}\label{lemma:swappingOfTasks}
 		Swapping two contiguous tasks $A$ and $B$ in a schedule does not improve the makespan if one of the conditions is true.
@@ -234,17 +235,22 @@
 		\todo[inline]{SKumar: decrease space between both schedules of Figure~\ref{fig:bothSchedule}}
 		We write the following constraints based on the two schedules of the Fig~\ref{fig:bothSchedule}.
 		
-		\begin{eqnarray*}
-			\scomp(A) & = & max(t_1 + CM_A, t_2) \\
-			\scomp(B) & = & max(\scomp(A) + CP_A,  t_1 + CM_A + CM_B)
-		\end{eqnarray*}
+			\noindent $\scomp(A) = max(t_1 + CM_A, t_2)$ \\
+			\noindent $\scomp(B) = max(\scomp(A) + CP_A,  t_1 + CM_A + CM_B)$\\
+
+%%		\begin{eqnarray*}
+%%			\scomp(A) & = & max(t_1 + CM_A, t_2) \\
+%%			\scomp(B) & = & max(\scomp(A) + CP_A,  t_1 + CM_A + CM_B)
+%%		\end{eqnarray*}
 		
-		Completion time of $B$ in original Schedule = $\scomm(B) + CP_B$
+		\noindent Completion time of $B$ in original Schedule = $\scomm(B) + CP_B$\\
+		\noindent Completion time of $B$ in swapped Schedule,  $\scomp '(B)  =  max(t_1 + CM_B, t_2)$\\
+		\noindent Completion time of $A$ in swapped Schedule, $ \scomp '(A) = max(\scomp'(B) + CP_B, t_1 + CM_B + CM_A)$
 		
-		\begin{eqnarray*}
-			\text{Completion time of $B$ in swapped Schedule, } \scomp '(B) & = & max(t_1 + CM_B, t_2)\\
-			\text{Completion time of $A$ in swapped Schedule, } \scomp '(A) & = & max(\scomp'(B) + CP_B, t_1 + CM_B + CM_A)
-		\end{eqnarray*}
+%%		\begin{eqnarray*}
+%%			\text{Completion time of $B$ in swapped Schedule, } \scomp '(B) & = & max(t_1 + CM_B, t_2)\\
+%%			\text{Completion time of $A$ in swapped Schedule, } \scomp '(A) & = & max(\scomp'(B) + CP_B, t_1 + CM_B + CM_A)
+%%		\end{eqnarray*}
 		
 		In both schedules, early available time on communication resource after scheduling $A$ and $B$ is same. If we show that early available time on computation resource in swapped schedule after scheduling both tasks is not less than the time of original schedule, then we are done. Hence our goal is to prove that,		
 		$$\scomp(B) + CP_B \le \scomp'(A) + CP_A $$
@@ -255,7 +261,6 @@
 			\scomp(B) + CP_B & = & max(\scomp(A) + CP_A + CP_B,  t_1 + CM_A + CM_B + CP_B)\\
 			& = & max(t_1 + CM_A + CP_A + CP_B, t_2 + CP_A + CP_B, t_1 + CM_A + CM_B + CP_B) 
 		\end{eqnarray*}
-		
 		Case I: $CP_A \ge CM_A, CP_B \ge CM_B, CM_A \le CM_B$
 		\begin{eqnarray*}
 			\scomp(B) + CP_B & = & max(t_1 + CM_A + CP_A + CP_B, t_2 + CP_A + CP_B, t_1 + CM_A + CM_B + CP_B)\\
@@ -315,9 +320,7 @@
 		
 		We traverse schedule $O$ from left to right and for each $ith$ task in sequence, we apply Lemma~\ref{lemma:swappingOfTasks} repetitively until order of task in the swapped schedule is same. It is obvious that after moving the $ith$ task at the beginning remaining schedule (schedule after $ith$ task) still satisfies one of the conditions of Lemma~\ref{lemma:swappingOfTasks}.
 		
-		Let the final swapped schedule is $S_{final}$. From Lemma~\ref{lemma:swappingOfTasks}, $makespan(S_{final}) \ge makesapn(S)$. From the construction, $makespan(S_{final}) \le makesapn(O)$. As $O$ is an optimal schedule, hence $makespan(S) = makesapn(O)$. This completes our proof.
-		
-		
+		Let the final swapped schedule is $S_{final}$. From Lemma~\ref{lemma:swappingOfTasks}, $makespan(S_{final})$ $ \ge $ $makesapn(S)$. From the construction, $makespan(S_{final})$ $ \le$ $ makesapn(O)$. As $O$ is an optimal schedule, hence $makespan(S) = makesapn(O)$. This completes our proof.
 	\end{proof}
 	
 	%%	 
@@ -479,7 +482,6 @@
 		Conversely, if such a partition of $A$ is achievable, then we can construct a feasible schedule $S$ 
 		without idle times by the pattern depicted in Fig~\ref{fig:firstSegment}. We have shown that $3PAR$ 
 		problem reduces to $DT$, and hence problem $DT$ is NP-complete.
-		\todo[inline]{Skumar: Increase width of both channels of Figure~\ref{fig:firstSegment}.}
 		
 		\begin{figure}[htb]
 			\tikzset{xtick/.style={inner xsep=0pt, inner ysep=3pt, minimum
@@ -517,17 +519,6 @@
 	Each task may require some intermediate buffer. As problem $DT$ is NP-complete and intermediate 
 	memory requirement of each task is zero (which is a special case of problem with intermediate memory 
 	requirement). Hence, problem $DT$ with intermediate memory requirement is also NP-complete.
-	
-	
-	
-	
-	
-	The proof of the above theorem is inspired from work by [Papadimitriou et. al], which applies a similar 
-	technique for 2-machine flowshop problem, where each machine can hold fixed amount of jobs. The 
-	main difference with the our approach is that they consider unit buffer requirement on 1st machine 
-	after job completion. On the contrary, our approach is designed where there is not any restriction on 
-	requested input data and memory is acquired before starting the data transfer on communication 
-	resource.
 	
 	
 	
@@ -675,7 +666,7 @@
 	%%	\label{fig:staticOrderExample}
 	%%\end{figure}
 	
-	Fig~\ref{fig:staticOrderExample} shows schedules for all proposed heuristics of this class for task set of Table~\ref{tab:staticOrderExample}.
+	Fig~\ref{fig:staticOrderExample} shows schedules for all proposed heuristics of this class for the task set of Table~\ref{tab:staticOrderExample}.
 	\subsection{Dynamic Selection}
 	%%%%string alg_name="largest_communication\_task\_respects\_memory\_restriction";
 	%%%%string alg_name="smallest_communication\_task\_respects\_memory\_restriction";
@@ -752,7 +743,7 @@
 	%%\label{fig:dynamicSelectionExample}
 	%%\end{figure}
 	
-	Fig~\ref{fig:dynamicSelectionExample} shows schedules for all proposed heuristics of this class for task set of Table~\ref{tab:dynamicSelectionExample}.
+	Fig~\ref{fig:dynamicSelectionExample} shows schedules for all proposed heuristics of this class for the task set of Table~\ref{tab:dynamicSelectionExample}.
 	
 	\subsection{Static Order with Dynamic Corrections}
 	
@@ -837,7 +828,7 @@
 	%%\label{fig:staticOrderDynamicCorrectionsExample}
 	%%\end{figure}
 	
-	Fig~\ref{fig:staticOrderDynamicCorrectionsExample} shows schedules for all proposed heuristics of this class for task set of Table~\ref{tab:staticOrderDynamicCorrectionsExample}.
+	Fig~\ref{fig:staticOrderDynamicCorrectionsExample} shows schedules for all proposed heuristics of this class for the task set of Table~\ref{tab:staticOrderDynamicCorrectionsExample}.
 	
 	
 	
@@ -877,6 +868,17 @@
 		%%& e'_i\leq s_j +d_{ij}L\\
 		%%& \sum_r (d_{ir} - b_{ir})CM(r) + TM(i) \le C\\
 	\end{align*} 
+
+
+We use GLPK solver v4.65 to solve the above formulation. The solver was unable to handle number of variables required to solve MILP at the scale of our interest. Hence, we solve the linear program iteratively for a small subset of size $k=3,4,5$ (solver was unable to handle number of variables required for $k\ge6$ ) and represent the makespan calculated by this heuristic as $lp.k$. At the boundary of two iterations we fixed the event (communication or computation) of an unfinished task who has  started before the boundary point and consider other events flexible. We compute various  $lp.k$ values for different memory capacities and observe that most of the other heuristics perform better than this heuristic. Hence, we do not include  this heuristic for the comparison in Section~{\ref{sec:exp}. Figure~\ref{fig:iterativeLpSolution} shows the performance of different heuristics with MILP based heuristics for various memory capacities of a single trace file.
+%%	\subsection{MILP Based Strategy}
+%%We use GLPK solver v4.65 to solve the MILP formulation described in Section~\ref{subsec:linearprogrammingformulation}. The solver was unable to handle number of variables required to solve MILP at the scale of our interest. Hence, we solve the linear program iteratively for a small subset of size $k=3,4,5$ (solver was unable to handle number of variables required for $k\ge6$ ) and represent the makespan calculated by this heuristic as $lp.k$. At the boundary of two iterations we fixed the event (communication or computation) of an unfinished task who has  started before the boundary point and consider other events flexible. We compute various  $lp.k$ values for different memory capacities and observe that most of the other heuristics perform better than this heuristic. Figure~\ref{fig:iterativeLpSolution} shows the comparison of different heuristics with MILP based heuristic for various memory capacities of a single trace file.
+\todo[inline]{SKumar: Obtain MILP based makespans for new memory capacities}
+\begin{figure}[htb]
+	\includegraphics[scale=0.5]{./results/makespan_with_lp.pdf}
+	\caption{Comparision of different heuristics with MILP solution based heuristic.}
+	\label{fig:iterativeLpSolution}
+\end{figure}
 	
 	\subsection{Favorable Situations for Heuristics}
 	\noindent The following table exhibits favorable scenarios for different heuristics. This table allows programmers to use the appropriate strategies to maximize communication-computation overlap for their applications.
@@ -919,11 +921,11 @@
 	%%	\todo[inline]{Scheduled based on Gilmore-Gomory algorithm and its performance }
 	We also consider an algorithm, proposed by Gilmore and Gomory, to obtain the minimal cost sequence for a set of jobs. In this algorithm, each job has a start and end state and a cost is associated to change the state. In our context, this cost can be seen as non-overlap time of computation for two adjacent tasks. Here is the main idea of this algorithm. Initially partial sequence of jobs is represented by a graph such that their overlap is maximum. Subsequently edges are added to this graph which minimized the total non-overlap cost  and connects two components. When all nodes of this graph is connected then an edge interchange mechanism is taken into account to determine the sequence of jobs, which ensures that the sequence has minimal cost.
 	
-	We refer ~\cite{Gilmore-Gomory:1964} for the detailed algorithm and ~\cite{gitworkrepo} for our implementation. This algorithm does not take memory capacity into consideration and only provides the sequence of processing. We applied the same sequence with different memory capacity restrictions for our experiments and call this heuristic as \textit{Gilmore-Gomory}.
+	We refer ~\cite{Gilmore-Gomory:1964} for the detailed algorithm and ~\cite{gitworkrepo} for our implementation. This algorithm does not take memory capacity into consideration and only provides the sequence of processing. We applied the same sequence with different memory capacity restrictions for our experiments and call this heuristic as \textit{Gilmore-Gomory} ($GG$).
 	
 	%%	\todo[inline]{may convert 10 subplots to 8 in all performance diagrams}
 	\todo[inline]{increase font size in all plots, may be free scale-y}
-	\todo[inline]{SKumar: decide metrics: ratio to optimal, percentage overlap, 100 - percentage non overlap}
+%%	\todo[inline]{SKumar: decide metrics: ratio to optimal, percentage overlap, 100 - percentage non overlap}
 	
 	
 	We evaluate different data transfer heuristics for the several memory capacities. From the obtained traces, first we determine the minimum requirement of the memory capacity $m_c$ to execute all tasks. Then we observe the behavior of all heuristics with memory capacity  $m_c$ to $2m_c$, in the gap of $0.125m_c$. Our performance metric is $ratio\_to\_optimal$, which is defined as the following. Let the makespan of a heuristic $H$ is $M_H$ and the makespan of the optimal  case with infinite memory is $OMIM$, then  $ratio\_to\_optimal (H)$ is $\frac{M_H}{OMIM}$ (lower value is better). This value would be  greater or equal to $1$. A value closer to $1$ indicates that suitability of a particular heuristic and maximum possible communication-computation overlap has been achieved for that heuristic.
@@ -936,7 +938,7 @@
 		\caption{Comparison of different heuristics for HF.}
 		\label{fig:ratio_to_optimal_hf}
 	\end{figure*}
-	As indicated above, HF tasks are highly homogeneous, this is also noticeable in Figure~\ref{fig:ratio_to_optimal_hf}. All heuristics depict similar behavior for minimum memory capacity $m_c$  and  increasing the memory capacity slightly does not change the performance of all heuristics. As memory capacity increased further, dynamic variants of heuristics starts performing better and for the moderate memory capacities (close to $2m_c$ ), static order with dynamic correction variants outperform others. \textit{Gilmore-Gomory} heuristic does not achieve good performance. It can be understood from the fact that the task sequence is obtained considering no extra memory is available, but here we apply the same sequence for a different scenario,  overall memory consumed at each point is limited to memory capacity.
+	As indicated above, HF tasks are highly homogeneous, this is also noticeable in Figure~\ref{fig:ratio_to_optimal_hf}. All heuristics depict similar behavior for minimum memory capacity $m_c$  and  increasing the memory capacity slightly does not change the performance of all heuristics. As memory capacity increased further, dynamic variants of heuristics starts performing better and for the moderate memory capacities (close to $2m_c$ ), static order with dynamic correction variants outperform others. \textit{Gilmore-Gomory} heuristic does not achieve good performance. It can be explained from the fact that the task sequence is obtained considering no extra memory is available, but here we apply the same sequence for a different scenario,  overall memory consumed at each point is limited to memory capacity.
 	
 	
 	\begin{figure}[htb]
@@ -956,7 +958,7 @@
 		\label{fig:ratio_to_optimal_ccsd}
 	\end{figure*}	
 	
-	CCSD application operates on tasks of different sizes, hence different heuristics depict distinct behaviors even at minimum memory capacity $m_c$ . Heterogeneity favors to dynamic strategies, therefore both dynamic and static order with dynamic correction based strategies perform good than  static based strategies. Similar to HF,  static order with dynamic correction based strategies outperform others as memory capacity becomes moderate. 
+	CCSD application operates on tasks of different sizes, hence different heuristics depict distinct behaviors even at minimum memory capacity $m_c$ . Heterogeneity favors to dynamic strategies, therefore both dynamic and static order with dynamic correction based strategies perform better than  static based strategies. Similar to HF,  static order with dynamic corrections based strategies outperform others as memory capacity becomes moderate. 
 	
 	
 	\begin{figure}[htb]
@@ -965,7 +967,7 @@
 		\label{fig:ratio_to_optimal_best_ccsd}
 	\end{figure}
 	
-	Figure~\ref{fig:ratio_to_optimal_best_ccsd} shows that best variants of dynamic and static order with dynamic correction  strategies achieve similar performance at minimum memory capacity $m_c$. But as memory capacity increases heterogeneity allows static+dynamic strategies to take advantage of static knowledge to get maximum overlap and dynamic correction to select another task in case of memory capacity limitation. Static strategies also start performing better at the end, which indicates that this application has potential for significant communication-computation overlap and pure dynamic strategies are unable to take scheduling decision based on this information.
+	Figure~\ref{fig:ratio_to_optimal_best_ccsd} shows that best variants of dynamic and static order with dynamic correction  strategies achieve similar performance at minimum memory capacity $m_c$. But as memory capacity increases, heterogeneity allows static order with dynamic corrections based strategies to take advantage of static knowledge to get maximum overlap and dynamic correction to select another task in case of memory capacity limitation. Static strategies also start performing better at the end, which indicates that this application has potential for significant communication-computation overlap and pure dynamic strategies are unable to take this information into account while making scheduling decisions.
 	
 	\subsection{HF and CCSD Characteristics}
 	
@@ -1005,14 +1007,7 @@
 	To get more insights into the considered applications, we also look in to their workloads. Figure~\ref{fig:ApplicationProperties} exhibits that HF is a communication intensive application and maximum 20\%  overlap can be expected in the best scenario. While in CCSD , communications and computations are almost evenly distributed and  40-75\% communication-computation overlap is possible.
 	
 	
-	\subsection{MILP Based Strategy}
-	We use GLPK solver v4.65 to solve the MILP formulation described in Section~\ref{subsec:linearprogrammingformulation}. The solver was unable to handle number of variables required to solve MILP at the scale of our interest. Hence, we solve the linear program iteratively for a small subset of size $k=3,4,5$ (solver was unable to handle number of variables required for $k\ge6$ ) and represent the makespan calculated by this heuristic as $lp.k$. At the boundary of two iterations we fixed the event (communication or computation) of an unfinished task who has  started before the boundary point and consider other events flexible. We compute various  $lp.k$ values for different memory capacities and observe that most of the other heuristics perform better than this heuristic. Figure~\ref{fig:iterativeLpSolution} shows the comparison of different heuristics with MILP based heuristic for various memory capacities of a single trace file.
-	\todo[inline]{SKumar: Obtain MILP based makespans for new memory capacities}
-	\begin{figure}[htb]
-		\includegraphics[scale=0.5]{./results/makespan_with_lp.pdf}
-		\caption{Comparision of different heuristics with MILP solution based heuristic.}
-		\label{fig:iterativeLpSolution}
-	\end{figure}
+
 	
 	\subsection{Scheduling in Batches}
 	In most applications, scheduler may only observe a limited batch of independent tasks. Therefore we organize tasks of each trace file in the batch of 100. Last group may have less than 100 tasks. We  apply each heuristic on each group consequently.  Figure~\ref{fig:best_variants_batch} shows performance of the best variants of all categories for both applications. The plots exhibit behavior similar to Figures~\ref{fig:ratio_to_optimal_best_hf} and ~\ref{fig:ratio_to_optimal_best_CCSD}, static order with dynamic correction variants attain maximum communication-computation overlap and outperform other heuristics.
@@ -1068,7 +1063,7 @@
 	%%We also plan to extend our model by taking bandwidth sharing and different possible routes for the same source-destination pair into account.
 	
 	
-	In this article, we consider the problem of deciding the order of data transfers between two memory nodes such that overlap of communication and  computation is maximized. With Exascale computing, applications face bottlenecks due to communications. Hence, it is extremely important to achieve the maximum overlap of computation and communication in order to exploit the full potential of the system. We show that determining the order of data transfers is an NP complete problem. We proposed multiple data transfer heuristics and evaluated them on two molecular chemistry kernels, HF and CCSD. Our results show that some of our heuristics achieve significant overlap and perform very close to the lower bound of makespan. We plan to evaluate our strategies on different applications coming from multiple domains. We also plan to study the behavior of our strategies in the context of overlapping CPU-GPU communications with computation. A runtime system aims at exposing different heuristics, to maximize the communication-computation overlap, at developer level and automatically selecting the best one is currently underway.
+	In this article, we consider the problem of deciding the order of data transfers between two memory nodes such that overlap of communication and  computation is maximized. With Exascale computing, applications face bottlenecks due to communications. Hence, it is extremely important to achieve the maximum overlap of computation and communication in order to exploit the full potential of the system. We show that determining the order of data transfers is an NP complete problem. We proposed several data transfer heuristics and evaluated them on two molecular chemistry kernels, HF and CCSD. Our results show that some of our heuristics achieve significant overlap and perform very close to the lower bound of makespan. We plan to evaluate our strategies on different applications coming from multiple domains. We also plan to study the behavior of our strategies in the context of overlapping CPU-GPU communications with computations. A runtime system aims at exposing different heuristics, to maximize the communication-computation overlap, at developer level and automatically selecting the best one is currently underway.
 	
 	
 	\begin{acks}
